[gd_scene load_steps=11 format=3 uid="uid://dy8ep82qfwbg1"]

[ext_resource type="Script" path="res://scenes/p5/exawave/exawave.gd" id="1_bnr8a"]
[ext_resource type="PackedScene" uid="uid://b6ywtyxyl3c8m" path="res://scenes/p5/exawave/lowlight.tscn" id="2_4gefu"]
[ext_resource type="PackedScene" uid="uid://daugqshjhk7o" path="res://scenes/p5/exawave/dark_wave.tscn" id="2_ctnd8"]
[ext_resource type="PackedScene" uid="uid://bu7tad7tj6l6e" path="res://scenes/p5/exawave/baselight.tscn" id="2_f5erd"]
[ext_resource type="PackedScene" uid="uid://ejn6fi7o3p3p" path="res://scenes/p5/exawave/medlight.tscn" id="3_dfx5v"]
[ext_resource type="PackedScene" uid="uid://bc70djyqj0lrc" path="res://scenes/p5/exawave/light_wave.tscn" id="3_vl8xu"]
[ext_resource type="PackedScene" uid="uid://ci2lmkux7c75g" path="res://scenes/p5/exawave/highlight.tscn" id="4_82lvs"]
[ext_resource type="PackedScene" uid="uid://dyjn775k2aiya" path="res://scenes/p5/exawave/box_highlight.tscn" id="5_4b8qr"]

[sub_resource type="Animation" id="Animation_w837l"]
resource_name = "exaline"
length = 14.0
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 5, 6.8, 7.8, 8.8, 9.8, 10.8, 11.8, 12.8, 13.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"small_highlight"
}, {
"args": [],
"method": &"med_highlight"
}, {
"args": [],
"method": &"large_highlight"
}, {
"args": [],
"method": &"box_highlight"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}, {
"args": [],
"method": &"wave_hit"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jd6b"]
_data = {
"exaline": SubResource("Animation_w837l")
}

[node name="Exawave" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
script = ExtResource("1_bnr8a")

[node name="WavesAB" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="WaveDarkA" parent="WavesAB" instance=ExtResource("2_ctnd8")]
unique_name_in_owner = true

[node name="WaveLightB" parent="WavesAB" instance=ExtResource("3_vl8xu")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="WavesCD" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="WaveDarkC" parent="WavesCD" instance=ExtResource("2_ctnd8")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="WaveLightD" parent="WavesCD" instance=ExtResource("3_vl8xu")]
unique_name_in_owner = true

[node name="BaselightAB" parent="." instance=ExtResource("2_f5erd")]
unique_name_in_owner = true

[node name="BaselightCD" parent="." instance=ExtResource("2_f5erd")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="LowlightAB" parent="." instance=ExtResource("2_4gefu")]
unique_name_in_owner = true

[node name="LowlightCD" parent="." instance=ExtResource("2_4gefu")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="MedlightAB" parent="." instance=ExtResource("3_dfx5v")]
unique_name_in_owner = true

[node name="MedlightCD" parent="." instance=ExtResource("3_dfx5v")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="HighlightAB" parent="." instance=ExtResource("4_82lvs")]
unique_name_in_owner = true

[node name="HighlightCD" parent="." instance=ExtResource("4_82lvs")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="BoxHighlightAB" parent="." instance=ExtResource("5_4b8qr")]
unique_name_in_owner = true

[node name="BoxHighlightCD" parent="." instance=ExtResource("5_4b8qr")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)

[node name="ExawaveAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3jd6b")
}
